--- a/recipes/spicycabbagesoup.html
+++ b/recipes/spicycabbagesoup.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes Index</title>
+    <title>Spicy Cabbage Soup</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/spicycabbagesoup.html">Spicy Cabbage Soup</a></li>
-    </ul>
+    <h1>Spicy Cabbage Soup Recipe</h1>
 </body>
 </html>
