feat: add recipe content

--- a/recipes/spicycabbagesoup.html
+++ b/recipes/spicycabbagesoup.html
@@ -7,5 +7,34 @@
 </head>
 <body>
     <h1>Spicy Cabbage Soup Recipe</h1>
+    <img src="../images/SpicyCabbageSoup.jpeg" alt="A bowl of spicy cabbage soup">
+    <h2>Description</h2>
+    <p>This spicy cabbage soup is soup-er easy to make. We begin with 
+        bacon, cooking down in the pot, so that we can sautee our cabbage and onions
+        in the grease. The bacon gives us plenty of time to cut our veggies.
+        Once everything is fried up, we can add the beef stock --
+        only 12 minutes until done! What a great weekday meal.
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1/2 lb bacon</li>
+        <li>1/2 head cabbage</li>
+        <li>2 medium onions</li>
+        <li>3 medium potatoes</li>
+        <li>4 cups beef stock</li>
+        <li>3 tablespoons red pepper flakes</li>
+        <li>2 bay leaves</li>
+        <li>salt and pepper to taste</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Cook bacon in large pot for 10-15 minutes, flipping halfway</li>
+        <li>While bacon is cooking, chop cabbage and onion</li>
+        <li>Remove bacon from pot, and sautee cabbage and onion, ~ 5 minutes</li>
+        <li>Add potatoes, beef stock, red pepper, bacon, and bay leaves</li>
+        <li>Boil for 12 minutes, or until potatoes are soft</li>
+        <li>Smash potatoes against side of pot to thicken soup base</li>
+        <li>Serve and enjoy!</li>
+    </ol>
 </body>
 </html>
