--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/spicycabbagesoup.html">Spicy Cabbage Soup</a></li>
+        <li><a href="./recipes/dofustirfry.html">Dofu Stir Fry</a></li>
+        <li><a href="./recipes/pbj.html">PB & J</a></li>
     </ul>
 </body>
 </html>
